--- a/52x52sm.html
+++ b/52x52sm.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Шахи «Дерев яні» – Купити з Доставкою (1200+ Замовлень)</title>
+    <title>Шахи «Деревяні» – Купити з Доставкою (1200+ Замовлень)</title>
 
     <meta
       name="description"
@@ -20,21 +20,21 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахи ТУТ" />
-    <meta property="og:url" content="https://shahmatytut.com/shahi" />
+    <meta property="og:url" content="https://shahmatytut.com/52x52sm" />
     <meta
       property="og:image"
       content="https://shahmatytut.com/image/shahy_ua.webp"
     />
     <meta http-equiv="content-language" content="uk-UA" />
     <meta name="robots" content="index, follow" />
-    <link rel="stylesheet" type="text/css" href="style.css?v=3.0" />
+    <link rel="stylesheet" type="text/css" href="style.css?v=3.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "Шахи Дерев яні",
+        "name": "Шахи Деревяні",
         "image": "/image/shahy_ua.webp",
         "description": "стандарт для гравців, розмір та деревʼяні фігури забезпечують комфорт та простір для стратегічних рухів.",
         "brand": {
@@ -44,7 +44,7 @@
         "offers": {
           "@type": "Offer",
           "priceCurrency": "UAH",
-          "price": 1100,
+          "price": 1300,
           "itemCondition": "https://schema.org/NewCondition",
           "availability": "https://schema.org/InStock",
           "seller": {
@@ -67,7 +67,7 @@
           itemtype="http://schema.org/SiteNavigationElement"
         >
           <a href="#promo" class="nav__item" itemprop="url">КУПИТИ</a>
-          <a href="#about" class="nav__item" itemprop="url">ДЕРЕВ ЯНІ</a>
+          <a href="#about" class="nav__item" itemprop="url">ДЕРЕВЯНІ</a>
           <a href="#photo" class="nav__item" itemprop="url">ФОТО</a>
           <a href="#question" class="nav__item" itemprop="url">ЯК ГРАТИ</a>
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
@@ -75,7 +75,7 @@
         <div class="lang">
           <a href="/" class="lang__item">30х30см</a>
           |
-          <a href="/34x34sm" class="lang__item">34x34см</a>
+          <a href="/34x34sm" class="lang__item">30x30см</a>
           |
           <span class="lang__item">52х52см</span>
         </div>
@@ -96,13 +96,21 @@
           alt="шахи гра"
         />
         <div class="promo_description" itemprop="description">
-          Насолода грою має бути завжди – купуйте дерев яні шахи!
+          Насолода грою має бути завжди – купуйте деревяні шахи!
         </div>
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-          <meta itemprop="priceCurrency" content="UAH" />
-          <div class="promo__price" itemprop="price">
-            <span class="price__amount">1100</span>
-            <span class="price__currency">грн</span>
+          <div
+            class="promo__price"
+            itemprop="offers"
+            itemscope
+            itemtype="http://schema.org/Offer"
+          >
+            <meta itemprop="priceCurrency" content="UAH" />
+            <!-- <span class="price__old">1101</span> -->
+            <div class="price__new" itemprop="price">
+              <span class="price__amount">1300</span>
+              <span class="price__currency">грн</span>
+            </div>
           </div>
         </div>
         <button class="button__buy">КУПИТИ</button>
@@ -125,22 +133,22 @@
             loading="lazy"
             alt="показати"
           />
-          <p>тут можеш обрати шахи іншого розміру: «30х30см» або «34х34см»</p>
+          <p>тут можеш обрати шахи іншого розміру: «30x30см» або «34х34см»</p>
         </div>
       </section>
       <section id="about" itemscope itemtype="http://schema.org/Thing">
-        <h2 class="about__title" itemprop="name">ДЕРЕВ ЯНІ</h2>
+        <h2 class="about__title" itemprop="name">ДЕРЕВЯНІ</h2>
         <div class="wrap about__box">
           <div class="about__content">
             <h3>Ціна</h3>
             <p itemprop="description">
-              Коштують 1100 грн. Фігури із дерева горіха, смерекові планки,
+              Коштують 1300 грн. Фігури із дерева горіха, смерекові планки,
               малюнком на березовому шпоні. У нас шахи шашки нарди для гри.
             </p>
             <h3>Україна</h3>
             <p>
               Шахи для початківців, для дітей, та для всіх, тому замовляйте та
-              отримуйте в будь-якому місці України! Вже Понад 800+ Замовлень!
+              отримуйте в будь-якому місці України! Вже Понад 2100+ Замовлень!
             </p>
           </div>
           <img
@@ -247,18 +255,18 @@
               />
             </div>
             <div class="photo__control">
-              <button class="photo__arrow-back"></button
-              ><button class="photo__arrow-next"></button>
+              <button class="photo__arrow-back" aria-label="back"></button
+              ><button class="photo__arrow-next" aria-label="next"></button>
             </div>
           </div>
 
           <div class="photo__content">
             <h3>В Наявності</h3>
             <ul>
-              <li>–– Шахи Дерев яні ––</li>
+              <li>–– Шахи Деревяні ––</li>
               <li>– розмір у відкритому вигляді: 52х52см</li>
               <li>– нарди шашки шахи</li>
-              <li>– дерев яні шахові фігури</li>
+              <li>– деревяні шахові фігури</li>
               <li>– пластикові фігури для шашок та нард</li>
               <li>– 2 кубики для нард</li>
             </ul>
@@ -516,7 +524,7 @@
         <h2 class="outreach__title">ТАКОЖ КУПУЮТЬ</h2>
         <div class="outreach__list">
           <a
-            href="https://monopolytut.com/"
+            href="https://monopolytut.com"
             rel="dofollow"
             class="outreach__item"
           >
@@ -525,7 +533,7 @@
               width="164"
               height="200"
               loading="lazy"
-              alt="монополія"
+              alt="настільна гра"
             />
             <span class="outreach__name">МОНОПОЛІЯ</span>
           </a>
@@ -539,7 +547,7 @@
               width="140"
               height="200"
               loading="lazy"
-              alt="ялинка штучна"
+              alt="ялинка штучна 180см"
             />
             <span class="outreach__name">ЯЛИНКА ШТУЧНА</span>
           </a>
@@ -571,7 +579,7 @@
             />
             <span class="outreach__name">МАНГАЛ</span>
           </a>
-          <a href="https://nardytut.com/" rel="dofollow" class="outreach__item">
+          <a href="https://nardytut.com" rel="dofollow" class="outreach__item">
             <img
               src="https://nardytut.com/image/outreach.webp"
               width="190"
@@ -579,7 +587,7 @@
               loading="lazy"
               alt="нарди ручної роботи"
             />
-            <span class="outreach__name">НАРДИ</span>
+            <span class="outreach__name">НАРДИ (Шахи Шашки)</span>
           </a>
         </div>
       </section>
@@ -664,7 +672,7 @@
                 name="title"
                 value="Шахи 52х52 3в1  (укр-стр-2)"
               />
-              <input type="hidden" name="price" id="price" value="1100" />
+              <input type="hidden" name="price" id="price" value="1300" />
               <input type="hidden" name="payment" id="payment" value="cash" />
               <input type="hidden" name="service" id="service" value="nova" />
               <input type="submit" value="Готово" />
@@ -673,7 +681,7 @@
             <div class="contact__social">
               <h4
                 class="social__link"
-                data-link="https://www.olx.ua/d/uk/obyavlenie/kupiti-monopolya-bank-bez-mezh-1200-zamovlen-IDU4BZt.html"
+                data-link="https://www.olx.ua/d/uk/obyavlenie/shahi-kupiti-shahi-derev-yan-shahi-nardi-shashki-1200-zamovlen-IDUjcF7.html"
               >
                 OLX
               </h4>
