--- a/34x34sm.html
+++ b/34x34sm.html
@@ -6,7 +6,7 @@
     <title>Шахматы «Деревянные» – Купить с Доставкой (1200+ Заказов)</title>
     <meta
       name="description"
-      content="Шахматы - (34x34, и другие)✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (1200+ заказов)!"
+      content="Шахматы - (30х30, и другие)✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (1200+ заказов)!"
     />
     <meta
       name="keywords"
@@ -15,18 +15,18 @@
     <meta property="og:title" content="Шахматы Купить" />
     <meta
       property="og:description"
-      content="Шахматы - (34x34, и другие)✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (1200+ заказов)!"
+      content="Шахматы - (30х30, и другие)✔️ Быстрая доставка (1-2 дня), выгодная цена. Посмотрите фотографии и покупайте шахматы на подарок (1200+ заказов)!"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахматы ТУТ" />
-    <meta property="og:url" content="https://shahmatytut.com/ru" />
+    <meta property="og:url" content="https://shahmatytut.com/30х30sm" />
     <meta
       property="og:image"
       content="https://shahmatytut.com/image/shahmaty_ru.webp"
     />
     <meta http-equiv="content-language" content="ru_RU" />
     <meta name="robots" content="index, follow" />
-    <link rel="stylesheet" type="text/css" href="style.css?v=2.0" />
+    <link rel="stylesheet" type="text/css" href="style.css?v=3.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script type="application/ld+json">
@@ -43,7 +43,7 @@
         "offers": {
           "@type": "Offer",
           "priceCurrency": "UAH",
-          "price": 900,
+          "price": 580,
           "itemCondition": "https://schema.org/NewCondition",
           "availability": "https://schema.org/InStock",
           "seller": {
@@ -55,10 +55,10 @@
     </script>
   </head>
   <body>
-    <div id="preloader">ШАХМАТЫ КУПИТЬ</div>
+    <div id="preloader">ШАХМАТЫ ТУТ</div>
     <header id="header" itemscope itemtype="http://schema.org/WebSite">
       <div class="header__box">
-        <h3 class="logo">ШАХМАТЫ КУПИТЬ</h3>
+        <h3 class="logo">ШАХМАТЫ ТУТ</h3>
         <nav
           class="nav"
           role="navigation"
@@ -74,7 +74,7 @@
         <div class="lang">
           <a href="/" class="lang__item">30х30см</a>
           |
-          <span class="lang__item">34x34см</span>
+          <span class="lang__item">30х30см</span>
           |
           <a href="/52x52sm" class="lang__item">52х52см</a>
         </div>
@@ -97,10 +97,16 @@
         <div class="promo_description" itemprop="description">
           Игра для тех, кто стремится улучшить свои тактические навыки.
         </div>
-        <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+        <div
+          class="promo__price"
+          itemprop="offers"
+          itemscope
+          itemtype="http://schema.org/Offer"
+        >
           <meta itemprop="priceCurrency" content="UAH" />
-          <div class="promo__price" itemprop="price">
-            <span class="price__amount">900</span>
+          <span class="price__old">990</span>
+          <div class="price__new" itemprop="price">
+            <span class="price__amount">580</span>
             <span class="price__currency">грн</span>
           </div>
         </div>
@@ -135,7 +141,7 @@
           <div class="about__content">
             <h3>Цена</h3>
             <p itemprop="description">
-              Цена 900 грн. На других сайтах – шахматы ручной работы, за большие
+              Цена 580 грн. На других сайтах – шахматы ручной работы, за большие
               суммы. У нас деревянные шахматы для игры, мы закупаем их оптом!
             </p>
             <h3>УКРАИНА</h3>
@@ -198,7 +204,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/image-v2_mini_1_ru.webp"
+                src="image/image_mini_1_ru.webp?v=2.0"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -213,7 +219,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/image-v2_mini_2_ru.webp"
+                src="image/image_mini_2_ru.webp?v=2.0"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -228,7 +234,22 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/image-v2_mini_3_ru.webp"
+                src="image/image_mini_3_ru.webp?v=2.0"
+                width="170"
+                height="128"
+                loading="lazy"
+                alt="Разложенные шахматы"
+              />
+              <meta itemprop="name" content="вигляд" />
+            </li>
+            <li
+              class="photo__item"
+              itemprop="item"
+              itemscope
+              itemtype="http://schema.org/ImageObject"
+            >
+              <img
+                src="image/image_mini_4_ru.webp?v=2.0"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -240,7 +261,7 @@
           <div class="photo__wrap">
             <div class="photo__frame">
               <img
-                src="image/image-v2_big_1_ru.webp"
+                src="image/image_big_1_ru.webp?v=2.0"
                 width="550"
                 height="413"
                 loading="lazy"
@@ -249,19 +270,27 @@
               />
             </div>
             <div class="photo__control">
-              <button class="photo__arrow-back"></button
-              ><button class="photo__arrow-next"></button>
+              <button class="photo__arrow-back" aria-label="back"></button
+              ><button class="photo__arrow-next" aria-label="next"></button>
             </div>
           </div>
           <div class="photo__content">
             <h3>В Наличии</h3>
+            <p>Деревянные Шахматы</p>
             <ul>
-              <li>–– Деревянные Шахматы ––</li>
-              <li>- размер шахматной доски 34x34см</li>
+              <li>В коробке:</li>
+              <li>- шахматные фигуры 32 шт.</li>
+              <li>- игровые кубики 2 шт.</li>
+              <li>- шашки фигуры 30 шт.</li>
+            </ul>
+            <ul>
+              <li>Характеристики:</li>
               <li>– шахи, шашки, нарды</li>
-              <li>- деревянные шахматные фигуры</li>
+              <li>- деревянная игровая доска</li>
+              <li>- деревянные фигуры</li>
               <li>- деревянные фишки</li>
-              <li>- 2 кубика</li>
+              <li>- деревянные шашки</li>
+              <li>- размер шахматной доски: 30х30см</li>
             </ul>
             <button class="button__buy">КУПИТЬ</button>
           </div>
@@ -528,11 +557,11 @@
               width="164"
               height="200"
               loading="lazy"
-              alt="монополия"
+              alt="настольная игра"
             />
             <span class="outreach__name">МОНОПОЛИЯ</span>
           </a>
-          <a href="https://elkatut.com/" rel="dofollow" class="outreach__item">
+          <a href="https://elkatut.com" rel="dofollow" class="outreach__item">
             <img
               src="https://elkatut.com/image/elkatut_com.webp"
               width="140"
@@ -543,7 +572,7 @@
             <span class="outreach__name">ИСКУССТВЕННАЯ ЕЛКА</span>
           </a>
           <a
-            href="https://shezlongtut.com/"
+            href="https://shezlongtut.com"
             rel="dofollow"
             class="outreach__item"
           >
@@ -556,11 +585,7 @@
             />
             <span class="outreach__name">ШЕЗЛОНГ</span>
           </a>
-          <a
-            href="https://mangaltut.com/"
-            rel="dofollow"
-            class="outreach__item"
-          >
+          <a href="https://mangaltut.com" rel="dofollow" class="outreach__item">
             <img
               src="https://mangaltut.com/image/outreach.webp"
               width="190"
@@ -571,7 +596,7 @@
             <span class="outreach__name">МАНГАЛ</span>
           </a>
           <a
-            href="https://nardytut.com/ruchnoj-roboty/"
+            href="https://nardytut.com/ruchnoj-roboty"
             rel="dofollow"
             class="outreach__item"
           >
@@ -665,9 +690,9 @@
               <input
                 type="hidden"
                 name="title"
-                value="Шахматы 34х34 3в1 (ру-версия)"
+                value="Шахматы 30х30 3в1 (royaltoys: S3023)"
               />
-              <input type="hidden" name="price" id="price" value="900" />
+              <input type="hidden" name="price" id="price" value="580" />
               <input type="hidden" name="payment" id="payment" value="cash" />
               <input type="hidden" name="service" id="service" value="nova" />
               <input type="submit" value="Готово" />
@@ -676,7 +701,7 @@
             <div class="contact__social">
               <h4
                 class="social__link"
-                data-link="https://www.olx.ua/d/uk/obyavlenie/kupit-monopoliya-garri-potter-1200-zakazov-IDU4CCl.html"
+                data-link="https://www.olx.ua/d/uk/obyavlenie/shahmaty-kupit-shahmaty-derevyannye-nardy-3v1-1200-zamovlen-IDUjbXT.html"
               >
                 OLX
               </h4>
@@ -710,7 +735,7 @@
       gtag('js', new Date());
       gtag('config', 'G-01MLQ4ZTBC');
     </script>
-    <!-- Hotjar Tracking Code for shahmatytut/34x34sm -->
+    <!-- Hotjar Tracking Code for shahmatytut/30х30sm -->
     <script>
       (function (h, o, t, j, a, r) {
         h.hj =
