--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Шахмати «Дерев яні» – Купити з Доставкою (1200+ Замовлень)</title>
+    <title>Шахмати «Деревяні» – Купити з Доставкою (1200+ Замовлень)</title>
     <meta
       name="description"
       content="Шахмати – (30х30, та інші)✔️ Швидка доставка (1-2 дні), хороша ціна. Перегляньте фотографії та купуйте шахмати на подарунок (1200+ замовлень)!"
@@ -19,21 +19,21 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахмати ТУТ" />
-    <meta property="og:url" content="https://shahmatytut.com/" />
+    <meta property="og:url" content="https://shahmatytut.com" />
     <meta
       property="og:image"
       content="https://shahmatytut.com/image/shahmaty_ua.webp"
     />
     <meta http-equiv="content-language" content="uk-UA" />
     <meta name="robots" content="index, follow" />
-    <link rel="stylesheet" type="text/css" href="style.css?v=2.0" />
+    <link rel="stylesheet" type="text/css" href="style.css?v=3.2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "Шахмати Дерев яні",
+        "name": "Шахмати Деревяні",
         "image": "/image/shahmaty_ua.webp",
         "description": "ідеально підходить для швидких і захопливих партій в компактному форматі.",
         "brand": {
@@ -43,7 +43,7 @@
         "offers": {
           "@type": "Offer",
           "priceCurrency": "UAH",
-          "price": 800,
+          "price": 590,
           "itemCondition": "https://schema.org/NewCondition",
           "availability": "https://schema.org/InStock",
           "seller": {
@@ -66,14 +66,14 @@
           itemtype="http://schema.org/SiteNavigationElement"
         >
           <a href="#promo" class="nav__item" itemprop="url">КУПИТИ</a>
-          <a href="#about" class="nav__item" itemprop="url">ДЕРЕВ ЯНІ</a>
+          <a href="#about" class="nav__item" itemprop="url">ДЕРЕВЯНІ</a>
           <a href="#photo" class="nav__item" itemprop="url">ФОТО</a>
           <a href="#question" class="nav__item" itemprop="url">ПРАВИЛА ГРИ</a>
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
           <span class="lang__item">30х30см</span> |
-          <a href="/34x34sm" class="lang__item">34x34см</a>
+          <a href="/34x34sm" class="lang__item">30х30см</a>
           |
           <a href="/52x52sm" class="lang__item">52х52см</a>
         </div>
@@ -97,10 +97,18 @@
           замовляй, грай та матуй всіх королів!
         </div>
         <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-          <meta itemprop="priceCurrency" content="UAH" />
-          <div class="promo__price" itemprop="price">
-            <span class="price__amount">800</span>
-            <span class="price__currency">грн</span>
+          <div
+            class="promo__price"
+            itemprop="offers"
+            itemscope
+            itemtype="http://schema.org/Offer"
+          >
+            <meta itemprop="priceCurrency" content="UAH" />
+            <span class="price__old">750</span>
+            <div class="price__new" itemprop="price">
+              <span class="price__amount">590</span>
+              <span class="price__currency">грн</span>
+            </div>
           </div>
         </div>
         <button class="button__buy">КУПИТИ</button>
@@ -123,25 +131,24 @@
             loading="lazy"
             alt="показати"
           />
-          <p>тут можеш обрати шахмати: «34х34см» або «52х52см»</p>
+          <p>тут можеш обрати шахмати: «30х30см» або «52х52см»</p>
         </div>
       </section>
       <section id="about" itemscope itemtype="http://schema.org/Thing">
-        <h2 class="about__title" itemprop="name">ДЕРЕВ ЯНІ</h2>
+        <h2 class="about__title" itemprop="name">ДЕРЕВЯНІ</h2>
         <div class="wrap about__box">
           <div class="about__content">
             <h3>Ціна</h3>
             <p itemprop="description">
-              Коштують 800 грн. Тут «саме ті» шахмати для гри, і ми враховуємо
-              кожне ваше замовлення, що підтверджено 800+ задоволеними
+              Коштують 590 грн. Тут «саме ті» шахмати для гри, і ми враховуємо
+              кожне ваше замовлення, що підтверджено 2100+ задоволеними
               клієнтами!
             </p>
 
             <h3>Україна</h3>
             <p>
-              Крутий набір який вже в Україні! В комплекті 32 великих фігури із
-              дерева горіха, смерековими планками та малюнком на березовому
-              шпоні.
+              Крутий набір який вже в Україні! В комплекті всі фігури, шашки та
+              фишки з дерева.
             </p>
           </div>
           <img
@@ -197,7 +204,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/image-v3_mini_1_uk.webp"
+                src="image/image_mini_1_uk.webp?v=2.0?v=2.0"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -212,7 +219,7 @@
               itemtype="http://schema.org/ImageObject"
             >
               <img
-                src="image/image-v3_mini_2_uk.webp"
+                src="image/image_mini_2_uk.webp?v=2.0"
                 width="170"
                 height="128"
                 loading="lazy"
@@ -220,45 +227,39 @@
               />
               <meta itemprop="name" content="шахмати" />
             </li>
-            <li
-              class="photo__item"
-              itemprop="item"
-              itemscope
-              itemtype="http://schema.org/ImageObject"
-            >
-              <img
-                src="image/image-v2_mini_3_uk.webp"
-                width="170"
-                height="128"
-                loading="lazy"
-                alt="шахмати в розгоронутому вигляді"
-              />
-              <meta itemprop="name" content="вигляд" />
-            </li>
           </ol>
           <div class="photo__wrap">
             <div class="photo__frame">
               <img
-                src="image/image-v3_big_1_uk.webp"
+                src="image/image_big_1_uk.webp?v=2.0"
                 width="550"
-                height="418"
+                height="413"
                 loading="lazy"
                 class="active"
                 alt="фото гри"
               />
             </div>
             <div class="photo__control">
-              <button class="photo__arrow-back"></button
-              ><button class="photo__arrow-next"></button>
+              <button class="photo__arrow-back" aria-label="back"></button
+              ><button class="photo__arrow-next" aria-label="next"></button>
             </div>
           </div>
           <div class="photo__content">
-            <h3>В Наявності:</h3>
+            <h3>В Наявності</h3>
+            <p>Шахмати Деревяні</p>
             <ul>
-              <li>–– Шахмати Дерев яні ––</li>
-              <li>- шахова дошка розміром 30х30см</li>
-              <li>- дерев яні фігури для шахмат</li>
-              <li>– пластикові фігури для шашок</li>
+              <li>В коробці:</li>
+              <li>- шахові фігури 32 шт.</li>
+              <li>- ігрові кубики 2 шт.</li>
+              <li>- шашки 30 шт.</li>
+            </ul>
+            <ul>
+              <li>Характеристики:</li>
+              <li>- матеріал дошки: дерево</li>
+              <li>- матеріал шахових фігур: дерево</li>
+              <li>- матеріал шашок: дерево</li>
+              <li>- матеріал фишок: дерево</li>
+              <li>- дерев яна ігрова дошка: 30х30см</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
@@ -510,7 +511,7 @@
         <h2 class="outreach__title">ТАКОЖ КУПУЮТЬ</h2>
         <div class="outreach__list">
           <a
-            href="https://monopolytut.com/"
+            href="https://monopolytut.com"
             rel="dofollow"
             class="outreach__item"
           >
@@ -519,7 +520,7 @@
               width="164"
               height="200"
               loading="lazy"
-              alt="монополія"
+              alt="настільна гра"
             />
             <span class="outreach__name">МОНОПОЛІЯ</span>
           </a>
@@ -533,7 +534,7 @@
               width="140"
               height="200"
               loading="lazy"
-              alt="ялинка штучна"
+              alt="ялинка штучна 180см"
             />
             <span class="outreach__name">ЯЛИНКА ШТУЧНА</span>
           </a>
@@ -565,7 +566,7 @@
             />
             <span class="outreach__name">МАНГАЛ</span>
           </a>
-          <a href="https://nardytut.com/" rel="dofollow" class="outreach__item">
+          <a href="https://nardytut.com" rel="dofollow" class="outreach__item">
             <img
               src="https://nardytut.com/image/outreach.webp"
               width="190"
@@ -656,9 +657,9 @@
               <input
                 type="hidden"
                 name="title"
-                value="Шахи 30х30 (укр-версія-1)"
+                value="Шахи 30х30 (royaltoys: B3116)"
               />
-              <input type="hidden" name="price" id="price" value="800" />
+              <input type="hidden" name="price" id="price" value="590" />
               <input type="hidden" name="payment" id="payment" value="cash" />
               <input type="hidden" name="service" id="service" value="nova" />
               <input type="submit" value="Готово" />
@@ -667,7 +668,7 @@
             <div class="contact__social">
               <h4
                 class="social__link"
-                data-link="https://www.olx.ua/d/uk/obyavlenie/kupiti-monopolya-bank-bez-mezh-1200-zamovlen-IDU4BZt.html"
+                data-link="https://www.olx.ua/d/uk/obyavlenie/shahmati-kupiti-shahmati-derev-yan-shashki-2v1-1200-zamovlen-IDUjcrt.html"
               >
                 OLX
               </h4>
